@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2019,v 1.3140 2019/07/31 15:43:26 brook Exp $
+$NetBSD: CHANGES-2019,v 1.3141 2019/07/31 15:46:40 brook Exp $
 
 Changes to the packages collection and infrastructure in 2019:
 
@@ -5097,3 +5097,4 @@ Changes to the packages collection and infrastructure in 2019:
 	Updated devel/R-iterators to 1.0.12 [brook 2019-07-31]
 	Updated devel/R-repr to 1.0.1 [brook 2019-07-31]
 	Updated devel/R-rlang to 0.4.0 [brook 2019-07-31]
+	Updated finance/R-TTR to 0.23.4 [brook 2019-07-31]
